[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.29"

[dependencies.bytemuck]
version = "1.14"
features = [ "derive" ]

[dependencies.pollster]
version = "0.3"
features = [ "macro" ]
